--- a/smart_health/package.json
+++ b/smart_health/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
     "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
